--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "axios": "^1.3.5",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13",
+    "firebase": "^9.20.0",
+    "vue": "^3.2.47",
     "vue-router": "^4.0.3",
+    "vuefire": "^3.1.0",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
